--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "1.3.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest and etc.",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator and etc.",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -45,6 +45,12 @@
       "import": "./superstruct/dist/superstruct.mjs",
       "require": "./superstruct/dist/superstruct.js"
     },
+    "./class-validator": {
+      "browser": "./class-validator/dist/class-validator.module.js",
+      "umd": "./class-validator/dist/class-validator.umd.js",
+      "import": "./class-validator/dist/class-validator.mjs",
+      "require": "./class-validator/dist/class-validator.js"
+    },
     "./package.json": "./package.json",
     "./": "./"
   },
@@ -64,7 +70,10 @@
     "joi/dist",
     "superstruct/package.json",
     "superstruct/src",
-    "superstruct/dist"
+    "superstruct/dist",
+    "class-validator/package.json",
+    "class-validator/src",
+    "class-validator/dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -78,6 +87,7 @@
     "build:joi": "microbundle --cwd joi --globals '@hookform/resolvers=hookformResolvers'",
     "build:superstruct": "microbundle --cwd superstruct --globals '@hookform/resolvers=hookformResolvers'",
     "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
+    "build:class-validator": "microbundle --cwd class-validator --globals '@hookform/resolvers=hookformResolvers'",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
@@ -96,7 +106,8 @@
     "superstruct",
     "typescript",
     "zod",
-    "vest"
+    "vest",
+    "class-validator"
   ],
   "repository": {
     "type": "git",
@@ -117,6 +128,8 @@
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "check-export-map": "^1.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -153,5 +166,6 @@
     "*.{md,json,yml}": [
       "prettier --write"
     ]
-  }
+  },
+  "dependencies": {}
 }
