--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "module": "ESNext",
-    "target": "es2017",
+    "target": "ES2019",
     "moduleResolution": "node",
     "skipLibCheck": true,
     "strict": true,
@@ -15,6 +15,8 @@
     "noFallthroughCasesInSwitch": true,
     "strictNullChecks": true,
     "isolatedModules": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "jsx": "react",
     "paths": {
       "@hookform/resolvers": ["."]
