--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,8 @@ jobs:
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
+          with:
+            node-version: 20
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
