--- a/package.json
+++ b/package.json
@@ -233,7 +233,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
-    "arktype": "1.0.19-alpha",
+    "arktype": "2.0.0-dev.14",
     "check-export-map": "^1.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
