--- a/arktype/package.json
+++ b/arktype/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "peerDependencies": {
     "react-hook-form": "^7.0.0",
-    "@hookform/resolvers": "^2.0.0"
+    "@hookform/resolvers": "^2.0.0",
+    "arktype": "2.0.0-dev.14"
   }
 }
